--- a/css/puls4.styl
+++ b/css/puls4.styl
@@ -1,27 +1,190 @@
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot?-6kafhk');
+	src:url('fonts/icomoon.eot?#iefix-6kafhk') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-6kafhk') format('woff'),
+		url('fonts/icomoon.ttf?-6kafhk') format('truetype'),
+		url('fonts/icomoon.svg?-6kafhk#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 gris_oscuro = #444
 azul = #22BCE0
+naranja = #DD4F24
+gris_texto = #7A7A7A
+a
+    color naranja
 body
     background #E8E8E8 
     font-family Helvetica
     color gris_oscuro
     font-size 16px
+footer
+    background naranja
+    color rgba(white,0.5)
+    text-align center
+    position absolute
+    bottom 0
+    width 100%
+    h3
+        font-size 14px
+        font-weight normal
+        strong
+            display block
+        .mejor
+            &:before
+            &:after
+                content " - "
 header
+    position relative
     background gris_oscuro
     color white
+    overflow hidden
     padding 0.5em
+    box-shadow 0 5px 0 rgba(0,0,0,0.2)
+    z-index 1
     .logo
+        float left
         border-right 1px solid azul
         width 60px
         img
             width 52px
     .titular
-        margin 0 80px 0 70px
+        margin 0 60px 0 70px
         .titulo
             font-size 18px
             font-weight normal
-            margin 0
+            margin 0 
             padding 0
-.left
-    float left
-.right
-    float right
+        .filtro
+            color azul
+            text-decoration none
+            font-weight bold
+            font-style italic
+            font-size 14px
+        .publicar
+            background naranja
+            color white
+            padding 0.2em 0.5em
+            text-decoration none
+            font-style italic
+            text-shadow 1px 1px 0px black
+            float right
+            margin -5px 1em 0 0
+    .usuario
+        position absolute 
+        right 10px
+        top 10px
+        .avatar
+            margin 0 1em 0 0
+            position relative
+            z-index 2
+            img
+                width 50px
+                border-radius 50%
+        .flechita
+            position absolute
+            z-index 0
+            width 50%
+            padding 3px
+            top 15px
+            right 0
+            display block
+            background naranja
+            color white
+            text-align right
+nav
+    background azul
+    border-left 15px solid white
+    border-right 15px solid white
+    position relative
+    &:before
+        content ""
+        border-left 7px solid white
+        border-bottom 20px solid transparent
+        border-top 20px solid transparent
+        position absolute
+        top 0
+        left 0
+    &:after
+        content ""
+        border-right 7px solid white
+        border-bottom 20px solid transparent
+        border-top 20px solid transparent
+        position absolute
+        top 0
+        right 0
+    .menu
+        margin 0
+        overflow-x auto
+        height 40px
+        line-height 40px
+        padding 0
+        white-space nowrap
+        li
+            display inline-block
+            a
+                padding 0 0.2em
+                margin 0 0.5em
+                display inline-block
+                color white
+                text-decoration none
+.posts
+    padding 0.5em
+    .post
+        background white
+        color gris_texto
+        box-shadow 2px 2px 10px rgba(black, 0.5)
+        border-radius 0 0 0.5em 0.5em
+        .acciones
+            border-top 3px solid azul
+            padding 0.5em
+            overflow hidden
+            .datos
+                float right
+                .comentarios
+                    background gris_texto
+                    color white
+                    padding 2px 5px
+                    margin 0 1em 0 0
+                    text-decoration none
+                    border-radius 3px
+            .votos
+                float left
+                .down 
+                .up
+                    text-decoration none
+                .down
+                    color red
+                .up
+                    color green
+        .descripcion
+            color girs_texto
+            .imagen
+                img
+                    width 120px
+                    vertical-align top
+                    height 160px
+                float left
+                margin 0
+            .detalles
+                height 160px
+                margin-left 130px
+                .titulo
+                    font-size 18px
+                    font-style italic
+                    color gris_oscuro
+                    margin 0
+                    padding 0.5em 0.5em 0 0
+                .autor
+                    margin 0.5em 0 2em 0
+                .tag
+                    background azul
+                    color white
+                    text-decoration none
+                    padding 0.2em 0.5em
+                    border-radius 0.5em
+                    box-shadow 2px 2px 2px rgba(black,0.5)
+                .fecha
+                    float right
+                    margin 0 1em 0 0
