--- a/css/puls4.css
+++ b/css/puls4.css
@@ -1,1 +1,273 @@
-a{color:#dd4f24}body{background:#e8e8e8;font-family:Helvetica;color:#444;font-size:16px}footer{background:#dd4f24;color:rgba(255,255,255,0.5);text-align:center;position:absolute;bottom:0;width:100%;}footer h3{font-size:14px;font-weight:normal;}footer h3 strong{display:block}footer h3 .mejor:before,footer h3 .mejor:after{content:" - "}header{position:relative;background:#444;color:#fff;overflow:hidden;padding:.5em;box-shadow:0 5px 0 rgba(0,0,0,0.2);z-index:1;}header .logo{float:left;border-right:1px solid #22bce0;width:60px;}header .logo img{width:52px}header .titular{margin:0 60px 0 70px;}header .titular .titulo{font-size:18px;font-weight:normal;margin:0;padding:0}header .titular .filtro{color:#22bce0;text-decoration:none;font-weight:bold;font-style:italic;font-size:14px}header .titular .publicar{background:#dd4f24;color:#fff;padding:.2em .5em;text-decoration:none;font-style:italic;text-shadow:1px 1px 0 #000;float:right;margin:-5px 1em 0 0}header .usuario{position:absolute;right:10px;top:10px;}header .usuario .avatar{margin:0 1em 0 0;position:relative;z-index:2;}header .usuario .avatar img{width:50px;border-radius:50%}header .usuario .flechita{position:absolute;z-index:0;width:50%;padding:3px;top:15px;right:0;display:block;background:#dd4f24;color:#fff;text-align:right}nav{background:#22bce0;border-left:15px solid #fff;border-right:15px solid #fff;position:relative;}nav:before{content:"";border-left:7px solid #fff;border-bottom:20px solid transparent;border-top:20px solid transparent;position:absolute;top:0;left:0}nav:after{content:"";border-right:7px solid #fff;border-bottom:20px solid transparent;border-top:20px solid transparent;position:absolute;top:0;right:0}nav .menu{margin:0;overflow-x:auto;height:40px;line-height:40px;padding:0;white-space:nowrap;}nav .menu li{display:inline-block;}nav .menu li a{padding:0 .2em;margin:0 .5em;display:inline-block;color:#fff;text-decoration:none}.posts{padding:.5em;}.posts .post{background:#fff;color:#7a7a7a;box-shadow:2px 2px 10px rgba(0,0,0,0.5);border-radius:0 0 .5em .5em;}.posts .post .acciones{border-top:3px solid #22bce0;padding:.5em;overflow:hidden;}.posts .post .acciones .datos{float:right;}.posts .post .acciones .datos .comentarios{background:#7a7a7a;color:#fff;padding:2px 5px;margin:0 1em 0 0;text-decoration:none;border-radius:3px}.posts .post .acciones .votos{float:left;}.posts .post .acciones .votos .down,.posts .post .acciones .votos .up{text-decoration:none}.posts .post .acciones .votos .down{color:#f00}.posts .post .acciones .votos .up{color:#008000}.posts .post .descripcion{color:girs_texto;}.posts .post .descripcion .imagen{float:left;margin:0}.posts .post .descripcion .imagen img{width:120px;vertical-align:top;height:160px}.posts .post .descripcion .detalles{height:160px;margin-left:130px;}.posts .post .descripcion .detalles .titulo{font-size:18px;font-style:italic;color:#444;margin:0;padding:.5em .5em 0 0}.posts .post .descripcion .detalles .autor{margin:.5em 0 2em 0}.posts .post .descripcion .detalles .tag{background:#22bce0;color:#fff;text-decoration:none;padding:.2em .5em;border-radius:.5em;box-shadow:2px 2px 2px rgba(0,0,0,0.5)}.posts .post .descripcion .detalles .fecha{float:right;margin:0 1em 0 0}
+@font-face {
+  font-family: 'iconitos';
+  src: url("../fonts/icomoon.eot?-6kafhk");
+  src: url("../fonts/icomoon.eot?#iefix-6kafhk") format('embedded-opentype'), url("../fonts/icomoon.woff?-6kafhk") format('woff'), url("../fonts/icomoon.ttf?-6kafhk") format('truetype'), url("../fonts/icomoon.svg?-6kafhk#icomoon") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+a {
+  color: #dd4f24;
+}
+body {
+  background: #e8e8e8;
+  font-family: Helvetica;
+  color: #444;
+  font-size: 16px;
+}
+footer {
+  background: #dd4f24;
+  color: rgba(255,255,255,0.5);
+  text-align: center;
+  padding: 1em 0;
+  width: 100%;
+}
+footer h3 {
+  font-size: 14px;
+  font-weight: normal;
+}
+footer h3 strong {
+  display: block;
+}
+footer h3 .mejor:before,
+footer h3 .mejor:after {
+  content: " - ";
+}
+header {
+  position: relative;
+  background: #444;
+  color: #fff;
+  overflow: hidden;
+  padding: 0.5em;
+  box-shadow: 0 5px 0 rgba(0,0,0,0.2);
+  z-index: 1;
+}
+header .logo {
+  float: left;
+  border-right: 1px solid #22bce0;
+  width: 60px;
+}
+header .logo img {
+  width: 52px;
+}
+header .titular {
+  margin: 0 60px 0 70px;
+}
+header .titular .titulo {
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
+header .titular .filtro {
+  color: #22bce0;
+  text-decoration: none;
+  font-weight: bold;
+  font-style: italic;
+  font-size: 14px;
+}
+header .titular .publicar {
+  background: #dd4f24;
+  color: #fff;
+  padding: 0.2em 0.5em;
+  text-decoration: none;
+  font-style: italic;
+  text-shadow: 1px 1px 0px #000;
+  float: right;
+  margin: -5px 1em 0 0;
+}
+header .titular .publicar:before {
+  content: "\e600";
+  font-family: "iconitos";
+  display: inline-block;
+  margin: 0 3px 0 0;
+}
+header .usuario {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+header .usuario .avatar {
+  margin: 0 1.3em 0 0;
+  position: relative;
+  z-index: 2;
+}
+header .usuario .avatar img {
+  width: 50px;
+  border-radius: 50%;
+}
+header .usuario .flechita {
+  position: absolute;
+  z-index: 0;
+  width: 50%;
+  padding: 3px;
+  top: 15px;
+  right: 0;
+  display: block;
+  background: #dd4f24;
+  color: #fff;
+  text-align: right;
+  text-decoration: none;
+}
+header .usuario .flechita:after {
+  font-family: "iconitos";
+  content: "\e601";
+  text-shadow: 1px 1px 0 #000;
+}
+nav {
+  background: #22bce0;
+  border-left: 15px solid #fff;
+  border-right: 15px solid #fff;
+  position: relative;
+}
+nav:before {
+  content: "";
+  border-left: 7px solid #fff;
+  border-bottom: 20px solid transparent;
+  border-top: 20px solid transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+nav:after {
+  content: "";
+  border-right: 7px solid #fff;
+  border-bottom: 20px solid transparent;
+  border-top: 20px solid transparent;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+nav .menu {
+  margin: 0;
+  overflow-x: auto;
+  height: 40px;
+  line-height: 40px;
+  padding: 0;
+  white-space: nowrap;
+}
+nav .menu li {
+  display: inline-block;
+}
+nav .menu li a {
+  padding: 0 0.2em;
+  margin: 0 0.5em;
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+}
+.posts {
+  padding: 0.5em;
+}
+.posts .post {
+  margin-bottom: 1em;
+  background: #fff;
+  color: #7a7a7a;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+  border-radius: 0 0 0.5em 0.5em;
+}
+.posts .post .acciones {
+  border-top: 3px solid #22bce0;
+  padding: 0.5em;
+  overflow: hidden;
+}
+.posts .post .acciones .datos {
+  float: right;
+}
+.posts .post .acciones .datos .comentarios {
+  background: #7a7a7a;
+  color: #fff;
+  padding: 2px 5px;
+  margin: 0 1em 0 0;
+  text-decoration: none;
+  border-radius: 3px;
+}
+.posts .post .acciones .datos .estrellita {
+  text-decoration: none;
+}
+.posts .post .acciones .datos .estrellita:after {
+  content: "\e601";
+  font-family: "iconitos";
+}
+.posts .post .acciones .votos {
+  float: left;
+}
+.posts .post .acciones .votos .down,
+.posts .post .acciones .votos .up {
+  text-decoration: none;
+}
+.posts .post .acciones .votos .down {
+  color: #f00;
+}
+.posts .post .acciones .votos .down:before {
+  font-family: "iconitos";
+  font-size: 1em;
+  content: "\e602";
+  vertical-align: bottom;
+}
+.posts .post .acciones .votos .up {
+  color: #008000;
+}
+.posts .post .acciones .votos .up:before {
+  font-family: "iconitos";
+  font-size: 1em;
+  content: "\e603";
+  vertical-align: bottom;
+}
+.posts .post .descripcion {
+  color: girs_texto;
+}
+.posts .post .descripcion .imagen {
+  float: left;
+  margin: 0;
+}
+.posts .post .descripcion .imagen img {
+  width: 120px;
+  vertical-align: top;
+  height: 160px;
+}
+.posts .post .descripcion .detalles {
+  height: 160px;
+  margin-left: 130px;
+}
+.posts .post .descripcion .detalles .titulo {
+  font-size: 18px;
+  font-style: italic;
+  color: #444;
+  margin: 0;
+  padding: 0.5em 0.5em 0 0;
+}
+.posts .post .descripcion .detalles .autor {
+  margin: 0.5em 0 2em 0;
+}
+.posts .post .descripcion .detalles .tag {
+  background: #22bce0;
+  color: #fff;
+  text-decoration: none;
+  padding: 0.2em 0.5em;
+  border-radius: 0.5em;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+.posts .post .descripcion .detalles .fecha {
+  margin: 0 1em 0 0;
+  float: right;
+}
+@media screen and (min-width: 768px) {
+  .posts .post {
+    width: 48%;
+    vertical-align: top;
+    display: inline-block;
+  }
+  .posts .post:nth-child(odd) {
+    margin-right: 2%;
+  }
+  header .titular .publicar {
+    position: relative;
+    padding-left: 3em;
+  }
+  header .titular .publicar:before {
+    position: absolute;
+    left: 0;
+    top: -10px;
+    font-size: 2.5em;
+  }
+}
