--- a/css/puls4.styl
+++ b/css/puls4.styl
@@ -1,17 +1,17 @@
-@font-face {
-	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-6kafhk');
-	src:url('fonts/icomoon.eot?#iefix-6kafhk') format('embedded-opentype'),
-		url('fonts/icomoon.woff?-6kafhk') format('woff'),
-		url('fonts/icomoon.ttf?-6kafhk') format('truetype'),
-		url('fonts/icomoon.svg?-6kafhk#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
 gris_oscuro = #444
 azul = #22BCE0
 naranja = #DD4F24
 gris_texto = #7A7A7A
+@font-face {
+    font-family: 'iconitos';
+    src:url('../fonts/icomoon.eot?-6kafhk');
+    src:url('../fonts/icomoon.eot?#iefix-6kafhk') format('embedded-opentype'),
+        url('../fonts/icomoon.woff?-6kafhk') format('woff'),
+        url('../fonts/icomoon.ttf?-6kafhk') format('truetype'),
+        url('../fonts/icomoon.svg?-6kafhk#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 a
     color naranja
 body
@@ -23,8 +23,7 @@ footer
     background naranja
     color rgba(white,0.5)
     text-align center
-    position absolute
-    bottom 0
+    padding 1em 0
     width 100%
     h3
         font-size 14px
@@ -71,12 +70,17 @@ header
             text-shadow 1px 1px 0px black
             float right
             margin -5px 1em 0 0
+            &:before
+                content "\e600"
+                font-family "iconitos"
+                display inline-block
+                margin 0 3px 0 0
     .usuario
         position absolute 
         right 10px
         top 10px
         .avatar
-            margin 0 1em 0 0
+            margin 0 1.3em 0 0
             position relative
             z-index 2
             img
@@ -93,6 +97,11 @@ header
             background naranja
             color white
             text-align right
+            text-decoration none
+            &:after
+                font-family "iconitos"
+                content "\e601"
+                text-shadow 1px 1px 0 black
 nav
     background azul
     border-left 15px solid white
@@ -132,6 +141,7 @@ nav
 .posts
     padding 0.5em
     .post
+        margin-bottom 1em
         background white
         color gris_texto
         box-shadow 2px 2px 10px rgba(black, 0.5)
@@ -149,6 +159,11 @@ nav
                     margin 0 1em 0 0
                     text-decoration none
                     border-radius 3px
+                .estrellita
+                    text-decoration none
+                    &:after
+                        content "\e601"
+                        font-family "iconitos"
             .votos
                 float left
                 .down 
@@ -156,8 +171,18 @@ nav
                     text-decoration none
                 .down
                     color red
+                    &:before
+                        font-family "iconitos"
+                        font-size 1em
+                        content "\e602"
+                        vertical-align bottom
                 .up
                     color green
+                    &:before
+                        font-family "iconitos"
+                        font-size 1em
+                        content "\e603"
+                        vertical-align bottom
         .descripcion
             color girs_texto
             .imagen
@@ -186,5 +211,23 @@ nav
                     border-radius 0.5em
                     box-shadow 2px 2px 2px rgba(black,0.5)
                 .fecha
-                    float right
                     margin 0 1em 0 0
+                    float right
+@media screen and (min-width: 768px)
+    .posts
+        .post
+            width 48%
+            vertical-align top
+            display inline-block
+            &:nth-child(odd)
+                margin-right 2%
+    header
+        .titular
+            .publicar
+                position relative
+                padding-left 3em
+                &:before
+                    position absolute
+                    left 0
+                    top -10px
+                    font-size 2.5em
